--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -173,8 +173,7 @@ function closeAll(){
   selectedProduct = null;
 }
 function goBack(){
-  // Fake Retailer Dashboard ka path
-  window.location.href = "retailer-dashboard.html";
+  window.location.href = "retailer.html";
 }
 // ---------------- CART ----------------
 let cart = JSON.parse(localStorage.getItem("cart")||"[]");
