--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -34,6 +34,46 @@ body{margin:0;background:#f3f6fb}
 .desc.short{-webkit-line-clamp:3;display:-webkit-box;-webkit-box-orient:vertical;overflow:hidden}
 .desc-toggle{color:#2563eb;font-size:13px;cursor:pointer}
 .price-value{font-size:20px;font-weight:700;color:#14532d}
+.topbar{
+  position:sticky;
+  top:0;
+  z-index:20;
+  display:flex;
+  align-items:center;
+  gap:12px;
+  padding:14px 16px;
+  background:linear-gradient(135deg,#2563eb,#1e40af);
+  border-radius:14px;
+  box-shadow:0 8px 20px rgba(37,99,235,.35);
+}
+
+.back-btn{
+  width:38px;
+  height:38px;
+  border-radius:50%;
+  border:none;
+  background:rgba(255,255,255,.25);
+  color:#fff;
+  font-size:18px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer;
+}
+
+.back-btn:hover{
+  background:rgba(255,255,255,.35);
+}
+
+.title{
+  flex:1;
+  text-align:center;
+  margin:0;
+  color:#fff;
+  font-size:18px;
+  font-weight:600;
+  letter-spacing:.4px;
+}
 </style>
 </head>
 
