--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -80,21 +80,14 @@ body{margin:0;background:#f3f6fb}
 <body>
 
 <div class="main">
-  <div class="header" style="display:flex;align-items:center;gap:10px">
-  <button onclick="goBack()" style="
-    background:#e5e7eb;
-    border:none;
-    border-radius:8px;
-    padding:6px 10px;
-    cursor:pointer;
-    font-size:14px
-  ">
-    ⬅ Back
+  <div class="topbar">
+  <button class="back-btn" onclick="goBack()">
+    <i class="bi bi-arrow-left"></i>
   </button>
 
-  <h3 id="catTitle" style="flex:1;margin:0;text-align:center">
+  <h2 id="catTitle" class="title">
     Category Products
-  </h3>
+  </h2>
 </div>
   <div class="products-grid" id="products"></div>
 </div>
