--- a/wholesaler.html
+++ b/wholesaler.html
@@ -84,7 +84,30 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   font-weight:600;
   margin:0;
 }
- 
+ .location-box{
+  background:#f8fafc;
+  padding:12px;
+  border-radius:12px;
+  margin-top:10px;
+}
+
+.location-box label{
+  font-size:13px;
+  font-weight:600;
+  color:#334155;
+}
+
+.loc-btn{
+  margin-top:6px;
+  width:100%;
+  border:none;
+  background:linear-gradient(135deg,#22c55e,#16a34a);
+  color:#fff;
+  padding:8px;
+  border-radius:10px;
+  cursor:pointer;
+  font-size:13px;
+ }
 </style>  </head>  <body>    
 <div class="main">    <div class="icon-bar">    
     <button class="icon-btn" onclick="openProfile()"><i class="bi bi-shop"></i></button>    
