--- a/wholesaler.html
+++ b/wholesaler.html
@@ -315,6 +315,27 @@ async function saveWholesalerProfileToServer() {
   }
 }
 
+ function getCurrentLocation(){
+  if(!navigator.geolocation){
+    alert("❌ Location not supported");
+    return;
+  }
+
+  navigator.geolocation.getCurrentPosition(
+    pos=>{
+      const lat = pos.coords.latitude;
+      const lng = pos.coords.longitude;
+
+      document.getElementById("locationText").value =
+        lat.toFixed(6)+", "+lng.toFixed(6);
+    },
+    ()=>{
+      alert("❌ Location permission denied");
+    },
+    { enableHighAccuracy:true }
+  );
+ } 
+
 async function loadCategories(){
 
   const r = await fetch(API + "/api/products/wholesaler/" + WID);
