--- a/wholesaler.html
+++ b/wholesaler.html
@@ -117,16 +117,32 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
     <h3>Wholesaler Dashboard</h3>    
     <small>ID: <b id="widText"></b></small>    
   </div>    <div id="categories" class="category-grid"></div>    
-</div>  <!-- PROFILE -->  <div class="modal" id="profileModal">    
- <div class="modal-content">    
-  <h3>Shop Profile</h3>    
-  <input id="shopName" placeholder="Shop Name">    
-  <input id="shopMobile" placeholder="UPI / Mobile Number">    
-  <textarea id="shopAddress" placeholder="Shop Address"></textarea>    
-  <button class="primary" onclick="saveWholesalerProfileToServer()">Save</button>    
-  <button onclick="closeAll()">Cancel</button>    
- </div>    
-</div>  <!-- PRODUCT -->  <!-- PRODUCT MODAL -->
+</div> <!-- PROFILE -->
+<div class="modal" id="profileModal">
+  <div class="modal-content">
+    <h3>Shop Profile</h3>
+
+    <input id="shopName" placeholder="Shop Name">
+    <input id="shopMobile" placeholder="UPI / Mobile Number">
+    <textarea id="shopAddress" placeholder="Shop Address"></textarea>
+
+    <!-- 📍 LOCATION (INSIDE PROFILE) -->
+    <div class="location-box">
+      <label>📍 Location</label>
+
+      <input id="locationText"
+             placeholder="Latitude, Longitude"
+             readonly>
+
+      <button class="loc-btn" onclick="getCurrentLocation()">
+        📡 Use Current Location
+      </button>
+    </div>
+
+    <button class="primary" onclick="saveWholesalerProfileToServer()">Save</button>
+    <button onclick="closeAll()">Cancel</button>
+  </div>
+</div> <!-- PRODUCT -->  <!-- PRODUCT MODAL -->
 <div class="modal" id="productModal">
   <div class="modal-content">
     <h3>Add Product</h3>
