--- a/retailer.html
+++ b/retailer.html
@@ -1001,6 +1001,36 @@ async function saveProfile(){
     alert("Server error");
   }
 }
+
+  function getRetailerLocation(){
+
+  if (!navigator.geolocation) {
+    alert("❌ Location not supported");
+    return;
+  }
+
+  navigator.geolocation.getCurrentPosition(
+    pos => {
+      const lat = pos.coords.latitude;
+      const lng = pos.coords.longitude;
+
+      document.getElementById("profileLocation").value =
+        lat.toFixed(6) + ", " + lng.toFixed(6);
+
+      // optional cache
+      localStorage.setItem(
+        "retailer_location",
+        JSON.stringify({ lat, lng })
+      );
+    },
+    err => {
+      if (err.code === 1) alert("❌ Location permission denied");
+      else if (err.code === 2) alert("❌ Location unavailable");
+      else alert("❌ Location error");
+    },
+    { enableHighAccuracy:true }
+  );
+  }
 // ------------------- NOTIFY -------------------
 setInterval(async()=>{
   const profile = JSON.parse(localStorage.getItem("retailerProfile")||"{}");
