--- a/retailer.html
+++ b/retailer.html
@@ -977,20 +977,57 @@ async function openRetailerProfile() {
 
 
 
-async function saveProfile(){
+async function saveProfile() {
 
   if(!profileMobile.value.trim()){
     alert("Mobile required");
     return;
   }
 
+  // ✅ Prepare payload
   const payload = {
     retailerId: localStorage.getItem("userId"),
     name: profileName.value.trim(),
     mobile: profileMobile.value.trim(),
-    address: profileAddress.value.trim()
+    address: profileAddress.value.trim(),
+    location: null  // default
   };
 
+  // ✅ Try to get current location if available
+  if(navigator.geolocation){
+    navigator.geolocation.getCurrentPosition(
+      (pos) => {
+        payload.location = {
+          lat: pos.coords.latitude,
+          lng: pos.coords.longitude
+        };
+        // Update profileLocation input for user
+        if(document.getElementById("profileLocation")){
+          document.getElementById("profileLocation").value =
+            payload.location.lat.toFixed(6) + ", " +
+            payload.location.lng.toFixed(6);
+        }
+
+        // ✅ Send payload to server after getting location
+        sendProfile(payload);
+
+      },
+      (err) => {
+        console.warn("Location not available:", err.message);
+        // Still send profile without location
+        sendProfile(payload);
+      },
+      { enableHighAccuracy: true, timeout: 5000 }
+    );
+  } else {
+    // Geolocation not supported
+    sendProfile(payload);
+  }
+
+}
+
+// ✅ Helper function to send profile to server
+async function sendProfile(payload){
   try{
     const res = await fetch(`${API}/api/retailers/saveProfile`,{
       method:"POST",
@@ -1001,25 +1038,22 @@ async function saveProfile(){
     const data = await res.json();
 
     if(data.success){
-
-      // ✅ CRITICAL — system dependency
-      localStorage.setItem(
-        "retailerProfile",
-        JSON.stringify(payload)
-      );
+      // ✅ Save to localStorage
+      localStorage.setItem("retailerProfile", JSON.stringify(payload));
+      if(payload.location){
+        localStorage.setItem("retailer_location", JSON.stringify(payload.location));
+      }
 
       alert("✅ Profile server me save ho gaya");
       closeAll();
-
-    }else{
+    } else {
       alert("❌ Save failed");
     }
-
   }catch(err){
+    console.error("SaveProfile Error:", err);
     alert("Server error");
   }
 }
-
   function getRetailerLocation(){
 
   if (!navigator.geolocation) {
