--- a/retailer.html
+++ b/retailer.html
@@ -419,9 +419,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     <!-- ✅ Current Location -->
     <div style="margin:8px 0; display:flex; gap:6px; align-items:center;">
       <input id="profileLocation" placeholder="📍 Current Location (lat, lng)" readonly style="flex:1;">
-      <button style="padding:8px 12px; cursor:pointer;" onclick="getCurrentLocation()">📌 Get Location</button>
-    </div>
-
+      <button style="padding:8px 12px; cursor:pointer;" onclick="getRetailerLocation()">📌 Get Location</button></div>
     <button class="primary" onclick="saveProfile()">Save</button>
     <button onclick="closeAll()">Close</button>
   </div>
