--- a/delivery.html
+++ b/delivery.html
@@ -60,6 +60,28 @@ body{margin:0;background:#eef2f7}
  width:100%;padding:10px;margin:8px 0;  
  border-radius:10px;border:1px solid #ccc  
 }  
+  /* ===== LIVE LOCATION ===== */
+.location-group{
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+  margin:12px 0;
+}
+
+.location-group label{
+  font-size:13px;
+  color:#0f172a;
+  font-weight:600;
+}
+
+.location-group input{
+  width:100%;
+  padding:10px;
+  border-radius:10px;
+  border:1px solid #2563eb;
+  background:#f8fafc;
+  font-size:13px;
+}
 </style>  </head>  <body>  <div class="main">    <div class="top">  
     <h3>🚚 Delivery Partner</h3>  
     <button class="icon-btn" onclick="openProfile()">  
