--- a/delivery.html
+++ b/delivery.html
@@ -256,7 +256,8 @@ async function setLiveLocation(){
       const lng = pos.coords.longitude;
 
       // 🔥 Location box me dikhao
-      if(document.getElementById("liveLocationBox")){
+      if(document.getElementById("pLocation").value =
+  lat.toFixed(6) + ", " + lng.toFixed(6);){
         liveLocationBox.value = lat.toFixed(6)+", "+lng.toFixed(6);
       }
 
