--- a/delivery.html
+++ b/delivery.html
@@ -240,7 +240,9 @@ window.closeProfile = function(){
     modal.style.display = "none";  
   }  
 }  
-
+function getLiveLocation(){
+  setLiveLocation();   // manual click par bhi wahi chale
+}
   let liveLat = null;
 let liveLng = null;
 
